<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!!!</string>
    <string name="avater">avater</string>
    <string name="dottedmenue">dottedMenue</string>
    <string name="author">Some very-very long header with ellipsize feature</string>
    <string name="some_nice_text">Some nice text</string>
    <string name="likesIcon">LikesIcon</string>
    <string name="likesCounter">1000</string>
    <string name="shareIcon">ShareIcon</string>
    <string name="sharedCounter">1000</string>
    <string name="viewsCounter">1000</string>
    <string name="viewsIcon">ViewsIcon</string>
    <string name="post_menu_remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="editable_message">Editable message</string>
    <string name="cancel_of_editing_button">cancel_of_editing_button</string>
    <string name="send_message_button">send_message_button</string>
    <string name="post_text">Post text</string>
    <string name="edit_message">Edit message</string>
    <string name="new_post_button">NewPostButton</string>
    <string name="video_preview">video_preview</string>
    <string name="play_video_button">Play Video Button</string>

</resources>