<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/pad16dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:contentDescription="@string/avater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology_icon" />


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pad16dp"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/dottedMenu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author[0]" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_underHeader"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/dottedMenu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dottedMenu"
        style="@style/Widget.AppTheme.DottedMenu"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:contentDescription="@string/dottedmenue"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:iconGravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad16dp"
        android:autoLink="web"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_postText"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesButton"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/likesIcon"
        android:text="@string/sharedCounter"
        android:textColor="@color/black"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_banner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sharesButton"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shareIcon"
        android:text="@string/sharedCounter"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@+id/likesButton"
        app:layout_constraintStart_toEndOf="@+id/likesButton"
        app:layout_constraintTop_toTopOf="@+id/likesButton" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewedIcon"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/viewsIcon"
        android:enabled="false"
        android:text="@string/sharedCounter"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/sharesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sharesButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,dottedMenu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad16dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="likesButton,sharesButton,viewedIcon"
        app:layout_constraintTop_toBottomOf="@id/video_banner" />

    <ImageView
        android:id="@+id/video_banner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/restricted_banner"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        android:contentDescription="@string/video_preview" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_video_button"
        style="@style/Widget.AppTheme.NewPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/video_banner"
        app:layout_constraintBottom_toBottomOf="@id/video_banner"
        app:layout_constraintStart_toStartOf="@id/video_banner"
        android:contentDescription="@string/play_video_button"
        app:icon="@drawable/ic_baseline_play_circle_filled_24"
        app:layout_constraintEnd_toEndOf="@id/video_banner"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="video_banner, play_video_button"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>