<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >




        <ImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/avater"
            app:layout_constraintBottom_toBottomOf="@+id/linearHeader"
            app:layout_constraintEnd_toStartOf="@+id/linearHeader"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearHeader"
            app:srcCompat="@drawable/ic_netology_icon" />

        <LinearLayout
            android:id="@+id/linearHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/constraintDottedMenu"
            app:layout_constraintEnd_toStartOf="@+id/constraintDottedMenu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/constraintDottedMenu">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@sample/posts.json/data/author[0]"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="12sp"
                tools:text="@sample/posts.json/data/published"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDottedMenu"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearHeader"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/dottedMenu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/dottedmenue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_baseline_more_vert_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="16sp"
            tools:text="@sample/posts.json/data/content" />
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <LinearLayout
            android:id="@+id/likeContainer"
            android:layout_width="64dp"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/shareContainer"
            app:layout_constraintEnd_toStartOf="@+id/shareContainer"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shareContainer"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/likesIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/likesCounter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewsContainer"
            android:layout_width="64dp"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
                android:contentDescription="@string/viewsIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/viewsCounter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareContainer"
            android:layout_width="64dp"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/viewsContainer"
            app:layout_constraintStart_toEndOf="@id/likeContainer"
            app:layout_constraintTop_toTopOf="@+id/viewsContainer"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_share_24"
                android:contentDescription="@string/shareIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sharedCounter" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.appcompat.widget.LinearLayoutCompat>